# libtaph

./: 404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml  sitemap.xml
api/: index.html
changelog/: index.html
cmake/: taph-config.cmake.in
damage-types/: index.html
docs/: api.md  changelog.md  damage-types.md  index.md  integration.md  methods.md
include/dart/: damage_c_api.h  frame_selector_decl.hpp  hexamer_tables.hpp  joint_damage_model.hpp  mixture_damage_model.hpp  sample_damage_profile.hpp  types.hpp
include/taph/: codon_tables.hpp  damage_c_api.h  frame_selector_decl.hpp  fungi_hexamer_table.hpp  gtdb_hexamer_table.hpp  hexamer_tables.hpp  invertebrate_hexamer_table.hpp  joint_damage_model.hpp  length_gc_joint_mixture.hpp  length_stratified_profile.hpp  library_interpretation.hpp  log_length_gmm.hpp  mixture_damage_model.hpp  plant_hexamer_table.hpp  protozoa_hexamer_table.hpp  sample_damage_profile.hpp  types.hpp  vertebrate_mammalian_hexamer_table.hpp  vertebrate_other_hexamer_table.hpp  viral_hexamer_table.hpp
integration/: index.html
methods/: index.html
search/: search_index.json
src/: damage_c_api.cpp  damage_estimation.cpp  length_stratified_profile.cpp  library_interpretation.cpp  log_length_gmm.cpp
tests/: test_damage_context_profile.cpp
